tests/pass/string_print.kl
// mostra with string literals.
vaziu inisiu() {
    mostra("Ola, Mundu!\n");
    mostra("Kriol lang\n");
}
